[package]
name = "moq-gst"
description = "Media over QUIC - gstreamer plugin"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq-gst"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moq-transport = "0.5"
moq-native = "0.2"
moq-pub = "0.6"

gst = { package = "gstreamer", version = "0.22" }
gst-base = { package = "gstreamer-base", version = "0.22" }
once_cell = "1"
bytes = "1"
url = "2"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
anyhow = { version = "1", features = ["backtrace"] }

[build-dependencies]
gst-plugin-version-helper = "0.8"

[lib]
name = "gstmoq"
crate-type = ["cdylib"]
path = "src/lib.rs"
